# aria

./: .gitignore  ARIA_PROJECT_CONTEXT.md  CONTEXT.md  Cargo.toml  aria.config.json  setup.ps1  setup.sh
.gemini/: plan.md
agents/: coder.yaml  researcher.yaml
aria-cli/: Cargo.toml
aria-cli/src/: main.rs
aria-core/: Cargo.toml
aria-core/src/: lib.rs  main.rs
aria-core/src/agent/: context.rs  definition.rs  loader.rs  mod.rs  runner.rs
aria-core/src/llm/: client.rs  mod.rs  parser.rs  prompt.rs
aria-core/src/llm/connectors/: cloudflare.rs  deepseek.rs  google.rs  mod.rs  trait_base.rs
aria-core/src/orchestrator/: engine.rs  mod.rs  planner.rs  reviewer.rs
aria-core/src/protocol/: channel.rs  messages.rs  mod.rs
aria-core/src/tools/: filesystem.rs  memory.rs  mod.rs  registry.rs  shell.rs  tool_trait.rs  web.rs
aria-core/src/whiteboard/: schema.rs  storage.rs
ariamem/: ARIA-SKILL.md  Cargo.toml  README.md
ariamem/examples/: demo.rs  test_graph.rs
ariamem/src/: config.rs  lib.rs  main.rs
ariamem/src/api/: cli.rs  dashboard.html  mcp.rs  mod.rs  rest.rs
ariamem/src/core/: engine.rs  types.rs
ariamem/src/extraction/: extractor.rs
ariamem/src/plugins/: embedder.rs  http_embedder.rs  llm_provider.rs  mod.rs  model2vec_embedder.rs  storage.rs  tfidf_embedder.rs
ariamem/src/relevance/: engine.rs
ariamem/src/retrieval/: engine.rs
ariamem/src/storage/: sqlite.rs
ariamem/src/vector/: hnsw.rs  index.rs  mod.rs  naive.rs
ariamem/tests/: engine_tests.rs  hybrid_search_tests.rs  integration_tests.rs  storage_tests.rs
hf_diag/: Cargo.toml
hf_diag/src/: main.rs
investigation/: README.md
