[package]
name = "aria-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace
ariamem = { path = "../ariamem" }

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = "0.8.8"
tower-http = { version = "0.6", features = ["cors"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Utilidades
anyhow = "1.0"
dotenvy = "0.15"
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "ariacore"
path = "src/main.rs"
